FlightPath 5.x Changelog
========================


2018-03-08
  Changed back behavior in advise.module's what if selection form screen, to load full degrees.  This is to correct a bug I introduced while trying
  to speed up execution.
  
  Made small change to filter_markup() function to help prevent an excess of newlines at the end of a string.  Special thanks to Logan Buth.
  

2018-03-07
  Fixed bug where new_from_split courses were allowed to fill into other degrees, instead of going straight to 'excess credits', which is the
  expected behavior.
  
  Added $group_id to find_xyz_match functions in _CourseList.  This is not used by core code, but is passed along to hooks, so that modules
  can better decide to allow the course or not.
  
  Added get_group_name function to _DatabaseHandler for quick lookups of a group's name by its id.
  
  Fixed a bug where "combined" degree plans didn't retain their "db_allow_dynamic = 1" member variable.  Thanks to Logan Buth.
  
  Fixed typo for db_allow_dynamic in theme.inc.  Thanks to Kim Sangwin


2018-03-05
  Added a new hook, hook_courselist_find_match_allow_course.  This allows modules too hook in just before a "match" is found by _CourseList's match methods,
  to determine if it should really keep the course or skip it.  This was introduced to counter a bug.  Special thanks to Logan Buth for the concept.
  
  Added extra code to _Course::name_equals, to call load_descriptive_data if subject_id is not populated.    


2018-02-27
  Fixed bug where selecting a track for a degree which already had a | in it would have failed.
  
  Fixed bug for non-dynamic degrees and degree option (track) selection.  It now uses the first "editable"
  degree found for a student, if the primary non-editable degree is non-dynamic.
  
  Added function get_degree_allow_dynamic() to _DatabaseHandler.php.
  

2017-12-5
  To fix an issue where groups with branches were not respecting the grade sort order, I added